json list of zap

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 	<meta charset="utf-8" />
 	<title>Exemple Google Map API v3</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-	<style>
-		@import "css/styles.css";
-	</style>
+    <link rel="stylesheet" href="css/styles.css" />
 	<script src="js/util.js"></script>
 	<script src="js/script-sync.js"></script>
 	<script src="js/script-asyn.js"></script>
