--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
 <head>
 	<meta charset="utf-8" />
-	<title>Exemple Google Map API v3</title>
+	<title>TP2 Web</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="css/styles.css" />
-	<script src="js/util.js"></script>
-	<script src="js/script-sync.js"></script>
 	
 		<!-- ENLEVER LES COMMENTAIRES CI-DESSOUS POUR TESTER CE QUI SE PASSE LORSQUE LE CHARGEMENT
 		 DE LA PAGE BLOQUE UN CERTAIN TEMPS. -->
@@ -19,11 +17,24 @@
 	<div id="carte-canvas"></div>
 	<a id="conf"><img id="configuration" src="./images/cog-icon-2-48x48.png" alt="Configuration"/></a>
     <div id="panneau-config">
-        <p>waefwaef</p>
-        <p>waefwaef</p>
-        <p>waefwaef</p>
-        <p>waefwaef</p>
-        <p>waefwaef</p>
+        <div id="trajet">
+            <h2>Trajets du RTC</h2>
+            <input type="checkbox" id="afficher-trajets-rtc" />
+            <label for="afficher-trajets-rtc">Afficher les trajets</label>
+        </div>
+        <div id="arrondissements">
+            <h2>Arrondissements</h2>
+            <a href="#" id="afficher-tous-arrond">Afficher tout</a>
+            <a href="#" id="masquer-tous-arrond">Masquer tout</a>
+            <ul id="liste-arrond"></ul>
+        </div>
+        <div>
+            <h2>Liste des ZAP</h2>
+            <ul id="liste-zap"></ul>
+        </div>
     </div>
+    <!--Les fonctions incluses dans le fichier utilitaire sont requises dans le script syncrhone, il doit donc être chargé avant -->
+    <script src="js/util.js"></script>
+    <script src="js/script-sync.js"></script>
 </body>
 </html>
